[project]
name = "blank-app-template"
version = "0.1.0"
description = "A simple Streamlit app template."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[tool.uv]
package = false